@@ -116,9 +116,9 @@ int JackDriver::Open(jack_nframes_t nframes,
     strcpy(fCaptureDriverName, capture_driver_name);
     strcpy(fPlaybackDriverName, playback_driver_name);
 
-    fEngineControl->fPeriodUsecs = (jack_time_t)floor((((float)nframes) / (float)samplerate) * 1000000.0f);
-    if (fEngineControl->fTimeOutUsecs == 0)  /* usecs; if zero, use 2 period size. */
-        fEngineControl->fTimeOutUsecs = (jack_time_t)(2.f * fEngineControl->fPeriodUsecs);
+    fEngineControl->fPeriodUsecs = jack_time_t(1000000.f / fEngineControl->fSampleRate * fEngineControl->fBufferSize); // in microsec
+    if (fEngineControl->fTimeOutUsecs == 0)  /* if zero [-t (timeout) was not used], use 2 period size */
+        fEngineControl->fTimeOutUsecs = jack_time_t(2.f * fEngineControl->fPeriodUsecs);
 
     fGraphManager->SetBufferSize(nframes);
     fGraphManager->DirectConnect(fClientControl->fRefNum, fClientControl->fRefNum); // Connect driver to itself for "sync" mode
